Ajuste no pom.